kube-state-metrics/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-state-metrics
  namespace: kube-system
spec:
  ingressClassName: traefik
  rules:
    - host: k8s-exporter.k8s.moody
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-state-metrics
                port:
                  number: 8080
